from BodyWeight import BodyWeight


class Calisthenics(BodyWeight):
    pass
