from FitnessApp.Cardio import Cardio


class Jogging(Cardio):
    def __init__(self, name, exercise_list):
        super().__init__(name, exercise_list)
