from WeightLifting import WeightLifting


class FreeWeight(WeightLifting):
    pass
