from WeightLifting import WeightLifting


class Machines(WeightLifting):
    pass
