@startuml FitnessUml

class User {
    String name
    int age
    int weight
    int height
}

class Goal {
    String description
}


class Exercise {
    {abstract} String name
    {abstract} String exercise_type
    {abstract} int sets
    {abstract} int reps
    {abstract} int time
    {abstract} int distance
}

class ExerciseRepetitive {
    {abstract} String name
    {abstract} String exercise_type
    {abstract} int sets
    {abstract} int reps
    {abstract} int time
    {abstract} int distance
}

class ExerciseTimed {
    {abstract} String name
    {abstract} String exercise_type
    {abstract} int sets
    {abstract} int reps
    {abstract} int time
    {abstract} int distance
}


abstract class Training {
    {abstract} String name
    {abstract} List<String> exercise_type
    {abstract} add_exercise()
    {abstract} remove_exercise()
    {abstract} create_exercise()
}

class BodyWeight {
    {abstract} String name
    {abstract} List<String> exercise_type
    {abstract} add_exercise()
    {abstract} remove_exercise()
    {abstract} create_exercise() : <<overloaded>>
}

class Cardio {
    {abstract} String name
    {abstract} List<String> exercise_type
    {abstract} add_exercise()
    {abstract} remove_exercise()
    {abstract} create_exercise() : <<overloaded>>

}

class WeightLifting {
    {abstract} String name
    {abstract} List<String> exercise_type
    {abstract} add_exercise()
    {abstract} remove_exercise()
    {abstract} create_exercise() : <<overloaded>>
}

class Calisthenics {
    
}

class Yoga {
    
}

class HIIT {
    
}

class Jogging {
    
}

class Machines {
    
}

class FreeWeight {
    
}

User o-- Goal
User *-- Training

ExerciseTimed --|> Exercise
ExerciseRepetitive --|> Exercise

Exercise -* Training

Training <|-- BodyWeight
Training <|-- Cardio
Training <|-- WeightLifting

BodyWeight <|-- Calisthenics
BodyWeight <|-- Yoga
Cardio <|-- HIIT
Cardio <|-- Jogging
WeightLifting <|-- FreeWeight
WeightLifting <|-- Machines

@enduml